@@ -1,3 +1,8 @@
+2008-03-10  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Added patches to EXTRA_DIST.
+	* Makefile.in: Regenerated.
+
 2008-03-10  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
